--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
           <a target="_blank" href="https://github.com/mywei1989">fork on Github</a>
         </nav>
       </div>
-
     </div>
     <div class="columns">
         <div class="block-body column three-fourths">
@@ -56,6 +55,11 @@
               <p>这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话</p>
               <p>这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话</p>
               <p>这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话</p>
+              <pre>
+                function(){
+                  console.log('hello world!');
+                }
+              </pre>
             </div>
           </article>
           <article>
