--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
-  <title>null-blog</title>
+  <title>null-index</title>
   <meta charset="utf-8" />
   <meta name="keywords" content="" />
   <meta name="description" content="" />
