--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
   <div class="container">
     <div class="columns page-header">
-      <h1>null的博客</h1>
+      <div>
+        <h1>null的博客</h1>
+      </div>
     </div>
     <div class="columns">
       <div class="navigation">
